--- a/Fit_Bianca_lab07/MainPage.xaml
+++ b/Fit_Bianca_lab07/MainPage.xaml
@@ -10,7 +10,7 @@
             VerticalOptions="Center">
 
             <Image
-                Source="butterfly.png"
+                Source="butterfly.jpg"
                 SemanticProperties.Description="Cute dot net bot waving hi to you!"
                 HeightRequest="200"
                 HorizontalOptions="Center" />
